edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "wayplatform/connect/tachograph/security/v1/authentication.proto";
import "wayplatform/connect/tachograph/security/v1/rsa_certificate.proto";

// Data from EF Card_Certificate (File ID 'C100h').
//
// This certificate is used for card authentication in Generation 1 tachograph
// cards. It uses RSA-based cryptography and is 194 bytes in length.
//
// See Data Dictionary, Section 2.12 (CardCertificate).
// See File Structure, Section 4.2.1 (TCS_148, TCS_150).
//
// ASN.1 Definition (Gen1):
//
//     Certificate ::= OCTET STRING (SIZE(194))
//
// Note: This EF is not signed (see Section 3.3, DDP_037).
message CardCertificate {
  // RSA certificate containing the card's public key for authentication.
  security.v1.RsaCertificate rsa_certificate = 1;

  // Signature (non-compliant per Section 3.3, captured for data fidelity).
  //
  // ASN.1 Definition (Gen1):
  //
  //     Signature ::= OCTET STRING (SIZE(128))
  bytes signature = 2;

  // Result of cryptographic signature authentication for this Elementary File.
  // Present when signature verification has been performed.
  tachograph.security.v1.Authentication authentication = 99;
}
