edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "wayplatform/connect/tachograph/security/v1/authentication.proto";
import "wayplatform/connect/tachograph/dd/v1/generation.proto";
import "wayplatform/connect/tachograph/vu/v1/transfer_type.proto";

// Intermediate format for VU file parsing that preserves exact binary boundaries.
//
// This format is the output of the first parsing pass and enables both signature
// verification and perfect round-trip fidelity. Each record contains the complete
// binary value including any embedded signature.
//
// See Appendix 7, Section 2.2.6 for the TV (Tag-Value) format specification.
message RawVehicleUnitFile {
  // A single Tag-Value record from the VU file.
  message Record {
    // The 2-byte tag (e.g., 0x7601 for Gen1 Overview).
    uint32 tag = 1;

    // The transfer type, inferred from the tag.
    TransferType type = 2;

    // The application generation (Gen1 or Gen2), inferred from the tag.
    dd.v1.Generation generation = 3;

    // The complete value portion of the TV record, including the embedded signature.
    // To separate data and signature, use the splitTransferValue helper function
    // which uses the signature_size field to determine the split point.
    //
    // Generation 1: Value ends with 128-byte RSA-1024 signature
    // Generation 2: Value ends with variable-length ECDSA signature
    bytes value = 4;

    // Size of the signature portion within value (last N bytes).
    // This is computed once during unmarshal and stored for efficient access.
    //
    // Generation 1: Always 128 (RSA-1024 signature)
    // Generation 2: Variable length (ECDSA signature, determined by sizeOf functions)
    int32 signature_size = 5;

    // Result of cryptographic signature authentication for this record.
    // Present when signature verification has been performed.
    tachograph.security.v1.Authentication authentication = 99;
  }

  repeated Record records = 1;
}


